<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nube">
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="378dp" >

	<EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/userName" />
	
	<EditText
        android:inputType="textPassword"
        android:id="@+id/passwordSesion"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/textpassword" />
	
	<Button
        android:id="@+id/botonlogin"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/passwordSesion"
        android:layout_marginTop="50dp"
        android:text="@string/botonLogin" />
	
	 <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/botonlogin"
        android:layout_below="@+id/botonlogin"
        android:layout_marginTop="24dp"
        android:onClick="register"
        android:text="@string/botonRegistrar" />
	
	</RelativeLayout>
</ScrollView>