<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nube"
    android:orientation="vertical" >

    <Button
        android:id="@+id/botonAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
   
        android:text="@string/altaDispositivo" />

    <Button
        android:id="@+id/botonVerLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonAgregar"
        android:layout_alignRight="@+id/botonAgregar"
        android:layout_below="@+id/botonAgregar"
        android:layout_marginTop="20dp"
        android:text="@string/listaDisp" />

    <Button
        android:id="@+id/botonCerarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonVerLista"
        android:layout_alignRight="@+id/botonVerLista"
        android:layout_below="@+id/botonVerLista"
        android:layout_marginTop="17dp"
       
        android:text="@string/cerrarSesion" />

</RelativeLayout>